--- a/src/Components/Pages/Blog/blog.css
+++ b/src/Components/Pages/Blog/blog.css
@@ -10,7 +10,7 @@
     opacity:1;
     background-color:black;
 }
-.activetab{
+.inactivetab{
     width:1%;
     opacity:0;
     background-color:black;
