nested pages of Blog added

--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -33,6 +33,7 @@
 /* product tab starts from here */
 .activetab{
     color:black;
+    background-color:white;
     text-decoration: underline;
     text-decoration-thickness:1px ;
 }
