Shop page updated

--- a/src/Components/Pages/Shop/shop.css
+++ b/src/Components/Pages/Shop/shop.css
@@ -24,3 +24,81 @@
     visibility:visible;
     opacity:1;
 }
+
+/* rating dropdown  */
+
+.ratingkey:hover .ratingdown{
+    visibility:visible;
+    opacity:1;
+    padding-top:20px;
+}
+
+
+
+.list:hover .checkbox{
+    background-color:black;
+    color:white;
+}
+.list:hover .check{
+    visibility:visible;
+    opacity:1;
+}
+
+/* pricedown from here */
+
+.pricekey:hover .pricedown{
+    visibility:visible;
+    opacity:1;
+    padding-top:20px;
+}
+
+/* branddown from here */
+
+.brandkey:hover .branddown{
+    visibility:visible;
+    opacity:1;
+    padding-top:20px;
+}
+
+/* fabricdown from here */
+
+.fabrickey:hover .fabricdown{
+    visibility:visible;
+    opacity:1;
+    padding-top:20px;
+}
+
+/* Sizedown  from here */
+
+.sizekey:hover .sizedown{
+    visibility:visible;
+    opacity:1;
+    padding-top:20px;
+}
+
+/* Colordown from here */
+
+.colorkey:hover .colordown{
+    visibility:visible;
+    opacity:1;
+    padding-top:20px;
+}
+/* fabricdown from here */
+
+.categorykey:hover .categorydown{
+    visibility:visible;
+    opacity:1;
+    padding-top:20px;
+}
+
+.sortkey:hover .sortdown{
+    visibility:visible;
+    opacity:1;
+    padding-top:20px;
+}
+
+.list:hover{
+    color:red;
+}
+
+
